--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,7 @@ body {
     background-color: var(--background-color);
     margin: 0;
     padding: 0;
+    background: linear-gradient(135deg, )
 }
 header {
     background-color: #333;
